feat(chat): add GET chats/headers
