# backend/internal/controller/http/docs/openapi.yaml
@@ -194,26 +194,29 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    chat_id:
-                      type: integer
-                      description: ID чата
-                      example: 42
-                    chat_name:
-                      type: string
-                      description: Имя чата (имя собеседника для личных чатов / название группы для групповых)
-                      example: "Александр"
-                    message:
-                      type: string
-                      description: Текст сообщения
-                      example: "Привет! Как дела?"
-                    time:
-                      type: string
-                      description: Время отправки сообщения
-                      example: "15:26"
+                type: object
+                properties:
+                  chats:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        chat_id:
+                          type: integer
+                          description: ID чата
+                          example: 42
+                        chat_name:
+                          type: string
+                          description: Имя чата (имя собеседника для личных чатов / название группы для групповых)
+                          example: "Александр"
+                        message:
+                          type: string
+                          description: Текст сообщения
+                          example: "Привет! Как дела?"
+                        time:
+                          type: string
+                          description: Время отправки сообщения
+                          example: "15:26"
 components:
   securitySchemes:
     bearerAuth:
